--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.8.2",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "flexbox-react": "^4.4.0",
