--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
+  "secure": false,
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -48,4 +49,5 @@
   "devDependencies": {},
   "author": "",
   "license": "ISC"
+
 }
